--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">   
    <parent>
-      <artifactId>seam-parent</artifactId>
+      <artifactId>seam-version-matrix</artifactId>
       <groupId>org.jboss.seam</groupId>      
       <version>3.0.0-SNAPSHOT</version>
    </parent>    
@@ -35,5 +35,10 @@
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
       </dependency>              
+
+      <dependency>
+         <groupId>${weld.groupId}</groupId>
+         <artifactId>weld-core-test</artifactId>
+      </dependency>
    </dependencies>
 </project>
