--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">   
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
-      <artifactId>seam-version-matrix</artifactId>
-      <groupId>org.jboss.seam</groupId>      
+      <artifactId>seam-parent</artifactId>
+      <groupId>org.jboss.seam</groupId>
       <version>3.0.0-SNAPSHOT</version>
-   </parent>    
-  
-   <modelVersion>4.0.0</modelVersion>   
+   </parent>
+
+   <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.seam</groupId>
    <artifactId>seam-persistence</artifactId>
    <packaging>jar</packaging>
    <version>3.0.0-SNAPSHOT</version>
    <name>Seam Persistence</name>
-         
+
+   <properties>
+      <seam.version>3.0.0-SNAPSHOT</seam.version>
+   </properties>
+
    <dependencies>
 
       <dependency>
          <groupId>org.hibernate</groupId>
-         <artifactId>hibernate</artifactId>
+         <artifactId>hibernate-core</artifactId>
       </dependency>
 
       <dependency>
@@ -34,11 +37,19 @@
       <dependency>
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
-      </dependency>              
+      </dependency>
 
       <dependency>
-         <groupId>${weld.groupId}</groupId>
+         <groupId>org.jboss.weld</groupId>
          <artifactId>weld-core-test</artifactId>
       </dependency>
    </dependencies>
+
+   
+   <scm>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk</developerConnection>
+      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk</url>
+   </scm>
+
 </project>
