--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,17 @@
       </dependency>
 
       <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.weld</groupId>
          <artifactId>weld-core-test</artifactId>
+         <scope>test</scope>
       </dependency>
+
    </dependencies>
 
    
