--- a/pom.xml
+++ b/pom.xml
@@ -1,241 +1,101 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+
    <parent>
-      <artifactId>seam-parent</artifactId>
       <groupId>org.jboss.seam</groupId>
-      <version>2</version>
+      <artifactId>seam-parent</artifactId>
+      <version>1</version>
    </parent>
 
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.seam</groupId>
-   <artifactId>seam-persistence</artifactId>
-   <packaging>jar</packaging>
+   <artifactId>seam-persistence-parent</artifactId>
+   <groupId>org.jboss.seam.persistence</groupId>
    <version>3.0.0-SNAPSHOT</version>
-   <name>Seam Persistence</name>
 
-   <properties>
-      <seam.version>3.0.0.b01</seam.version>
-      <arquillian.version>1.0.0-SNAPSHOT</arquillian.version>
-      <junit.version>4.8.1</junit.version>
-      <jboss.home>${env.JBOSS_HOME}</jboss.home>
-      <jboss.domain>default</jboss.domain>
-      <glassfish.version>3.0.1-b19</glassfish.version>
-      <jboss-as-client.version>6.0.0-SNAPSHOT</jboss-as-client.version>
-      <jboss-javaee6-spec.version>1.0.0.Beta4</jboss-javaee6-spec.version>
-      <jboss-server-manager.version>1.0.3.GA</jboss-server-manager.version>
-   </properties>
+   <packaging>pom</packaging>
+   <name>Seam Persistence Module Parent POM</name>
 
    <prerequisites>
       <maven>3.0</maven>
    </prerequisites>
 
+   <description>
+		The Parent for Seam Persistence Modules
+	</description>
+
+   <url>http://www.seamframework.org</url>
+
+   <modules>
+      <module>api</module>
+      <module>impl</module>
+   </modules>
+
+   <properties>
+      <seam.version>3.0.0.b01</seam.version>
+   </properties>
+
    <dependencyManagement>
       <dependencies>
+
          <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>seam</artifactId>
             <version>${seam.version}</version>
-            <type>pom</type>
             <scope>import</scope>
+            <type>pom</type>
          </dependency>
 
+         <!-- Need to use dependencyManagement to override org.jboss.seam:seam for submodules -->
          <dependency>
-            <groupId>org.jboss.arquillian</groupId>
-            <artifactId>arquillian-junit</artifactId>
-            <version>${arquillian.version}</version>
-            <scope>test</scope>
+            <groupId>org.jboss.seam.persistence</groupId>
+            <artifactId>seam-persistence-api</artifactId>
+            <version>${project.version}</version>
          </dependency>
 
+
          <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.jboss.seam.persistence</groupId>
+            <artifactId>seam-persistence</artifactId>
+            <version>${project.version}</version>
          </dependency>
 
       </dependencies>
-
-
    </dependencyManagement>
-
-   <dependencies>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-      </dependency>
-      
-      <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-core</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.spec.javax.interceptor</groupId>
-         <artifactId>jboss-interceptors-api_1.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.transaction</groupId>
-         <artifactId>jta</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-      </dependency>
-
-      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
-
-       <dependency>
-          <groupId>org.jboss.spec</groupId>
-          <artifactId>jboss-javaee-6.0</artifactId>
-          <version>${jboss-javaee6-spec.version}</version>
-          <type>pom</type>
-          <scope>provided</scope>
-       </dependency>
-
-      <dependency>
-         <groupId>org.jboss.weld</groupId>
-         <artifactId>weld-extensions</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
-         <type>jar</type>
-         <scope>compile</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>org.jboss.arquillian</groupId>
-         <artifactId>arquillian-junit</artifactId>
-         <scope>test</scope>
-      </dependency>
-   </dependencies>
-
 
    <profiles>
       <profile>
-         <id>default</id>
+         <id>distribution</id>
          <activation>
-            <activeByDefault>true</activeByDefault>
+            <property>
+               <name>release</name>
+            </property>
          </activation>
-         <build>
-            <plugins>
-               <plugin>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
-                     <skip>true</skip>
-                  </configuration>
-               </plugin>            
-           </plugins>
-         </build>
+         <modules>
+            <module>dist</module>
+            <module>docs/reference</module>
+         </modules>
       </profile>
-   
       <profile>
-         <id>jbossas-remote-60</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.arquillian.container</groupId>
-               <artifactId>arquillian-jbossas-remote-6</artifactId>
-               <version>${arquillian.version}</version>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.jboss.spec</groupId>
-               <artifactId>jboss-javaee-6.0</artifactId>
-               <version>${jboss-javaee6-spec.version}</version>
-               <type>pom</type>
-               <scope>provided</scope>
-            </dependency>
-            <!-- need for org.jnp.interfaces.NamingContextFactory -->
-            <dependency>
-               <groupId>org.jboss.jbossas</groupId>
-               <artifactId>jboss-as-client</artifactId>
-               <version>${jboss-as-client.version}</version>
-               <type>pom</type>
-               <scope>test</scope>
-            </dependency>
-         </dependencies>
-         <build>
-            <testResources>
-               <testResource>
-                  <directory>src/test/resources</directory>
-               </testResource>
-               <testResource>
-                  <directory>src/test/resources-jbossas</directory>
-               </testResource>
-            </testResources>
-         </build>
-      </profile>
-
-      <profile>
-         <id>glassfish-embedded-30</id>
+         <id>arquillian-glassfish-embedded-30</id>
          <dependencies>
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-glassfish-embedded-30</artifactId>
-               <version>${arquillian.version}</version>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.glassfish.extras</groupId>
-               <artifactId>glassfish-embedded-all</artifactId>
-               <version>${glassfish.version}</version>
-               <scope>provided</scope>
             </dependency>
          </dependencies>
-         <build>
-            <testResources>
-               <testResource>
-                  <directory>src/test/resources</directory>
-               </testResource>
-               <testResource>
-                  <directory>src/test/resources-glassfish</directory>
-               </testResource>
-            </testResources>
-         </build>
-      </profile>
-
-      <profile>
-         <id>glassfish-remote-30</id>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.arquillian.container</groupId>
-               <artifactId>arquillian-glassfish-remote-30</artifactId>
-               <version>${arquillian.version}</version>
-               <scope>test</scope>
-            </dependency>
-            <dependency>
-               <groupId>org.glassfish.extras</groupId>
-               <artifactId>glassfish-embedded-all</artifactId>
-               <version>${glassfish.version}</version>
-               <scope>provided</scope>
-            </dependency>
-         </dependencies>
-         <build>
-            <testResources>
-               <testResource>
-                  <directory>src/test/resources</directory>
-               </testResource>
-               <testResource>
-                  <directory>src/test/resources-glassfish</directory>
-               </testResource>
-            </testResources>
-         </build>
       </profile>
    </profiles>
 
+   <developers>
+      <developer>
+         <name>Stuart Douglas</name>
+         <email>stuart.w.douglas@gmail.com</email>
+      </developer>
+   </developers>
+
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk</developerConnection>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk </connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk </developerConnection>
       <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk</url>
    </scm>
-
 </project>
 
