--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
    </parent>
 
    <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.seam</groupId>
+   <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-api</artifactId>
    <packaging>jar</packaging>
    <version>3.0.0-SNAPSHOT</version>
