--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -89,6 +89,11 @@
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
       </dependency>
+      
+      <dependency>
+         <groupId>org.jboss.seam.persistence</groupId>
+         <artifactId>seam-persistence-api</artifactId>
+      </dependency>
 
       <dependency>
          <groupId>org.slf4j</groupId>
