--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -31,6 +31,7 @@
 
 
    <dependencies>
+   
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
@@ -71,6 +72,18 @@
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <scope>provided</scope>
+      </dependency>
+      
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <scope>test</scope>
+      </dependency>
+      
+      <dependency>
+         <groupId>org.jboss.weld</groupId>
+         <artifactId>weld-core</artifactId>
+         <scope>test</scope>
       </dependency>
 
        <dependency>
