--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -8,8 +8,8 @@
    </parent>
 
    <modelVersion>4.0.0</modelVersion>
-   <groupId>org.jboss.seam</groupId>
-   <artifactId>seam-persistence</artifactId>
+   <groupId>org.jboss.seam.persistence</groupId>
+   <artifactId>seam-persistence-impl</artifactId>
    <packaging>jar</packaging>
    <version>3.0.0-SNAPSHOT</version>
    <name>Seam Persistence</name>
