modify dependency scopes

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -40,11 +40,13 @@
       <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
+         <scope>provided</scope>
       </dependency>
 
       <dependency>
          <groupId>org.hibernate.javax.persistence</groupId>
          <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <scope>provided</scope>
       </dependency>
 
       <dependency>
