update jta scope

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -58,6 +58,7 @@
       <dependency>
          <groupId>javax.transaction</groupId>
          <artifactId>jta</artifactId>
+         <scope>provided</scope>
       </dependency>
 
       <dependency>
