--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,8 @@
             </property>
          </activation>
          <modules>
-            <module>dist</module>
-            <module>docs/reference</module>
+            <!--<module>dist</module>-->
+            <!--<module>docs/reference</module>-->
          </modules>
       </profile>
       <profile>
