--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -89,6 +89,13 @@
          <scope>test</scope>
       </dependency>
 
+       <dependency>
+          <groupId>org.jboss.spec</groupId>
+          <artifactId>jboss-javaee-6.0</artifactId>
+          <type>pom</type>
+          <scope>provided</scope>
+       </dependency>
+
       <dependency>
          <groupId>org.jboss.weld</groupId>
          <artifactId>weld-extensions</artifactId>
