--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -114,6 +114,13 @@
          <artifactId>arquillian-junit</artifactId>
          <scope>test</scope>
       </dependency>
+      
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-core</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      
    </dependencies>
 
 
