--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>seam-persistence</artifactId>
             <version>${project.version}</version>
          </dependency>
+         
+         <dependency>
+	         <groupId>org.hibernate</groupId>
+	         <artifactId>hibernate-core</artifactId>
+	         <version>3.5.1-Final</version>
+	      </dependency>
 
       </dependencies>
    </dependencyManagement>
