--- a/api/pom.xml
+++ b/api/pom.xml
@@ -23,7 +23,11 @@
         <groupId>javax.enterprise</groupId>
         <artifactId>cdi-api</artifactId>
       </dependency>
-
+      <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>jta</artifactId>
+        <scope>provided</scope>
+      </dependency>  
 	  <dependency>
 		  <groupId>org.jboss.spec</groupId>
 		  <artifactId>jboss-javaee-6.0</artifactId>
