--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -108,7 +108,12 @@
          <type>jar</type>
          <scope>compile</scope>
       </dependency>
-
+		<dependency>
+		     <groupId>org.hibernate</groupId>
+		     <artifactId>hibernate-search</artifactId>
+		     <version>3.2.1.Final</version>
+		     <optional>true</optional>
+		 </dependency>
       <dependency>
          <groupId>org.jboss.arquillian</groupId>
          <artifactId>arquillian-junit</artifactId>
