--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -157,15 +157,59 @@
          <activation>
             <activeByDefault>true</activeByDefault>
          </activation>
+         <dependencies>
+            <dependency>
+               <groupId>org.jboss.arquillian.container</groupId>
+               <artifactId>arquillian-jbossas-managed-6</artifactId>
+               <version>${arquillian.version}</version>
+               <scope>test</scope>
+            </dependency>
+            <dependency>
+	            <groupId>org.jboss.jbossas</groupId>
+	            <artifactId>jboss-server-manager</artifactId>
+	            <version>1.0.3.GA</version>
+	        </dependency>
+            
+            <!-- need for org.jnp.interfaces.NamingContextFactory -->
+            <dependency>
+               <groupId>org.jboss.jbossas</groupId>
+               <artifactId>jboss-as-client</artifactId>
+               <version>${jboss-as-client.version}</version>
+               <type>pom</type>
+               <scope>test</scope>
+            </dependency>
+         </dependencies>
          <build>
+            <testResources>
+               <testResource>
+                  <directory>src/test/resources</directory>
+               </testResource>
+               <testResource>
+                  <directory>src/test/resources-jbossas</directory>
+               </testResource>
+            </testResources>
             <plugins>
-               <plugin>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <configuration>
-                     <skip>true</skip>
-                  </configuration>
-               </plugin>            
-           </plugins>
+	            <plugin>
+					  <groupId>org.apache.maven.plugins</groupId>
+					  <artifactId>maven-enforcer-plugin</artifactId>
+					  <executions>
+					    <execution>
+					      <id>enforce-property</id>
+					      <goals>
+					        <goal>enforce</goal>
+					      </goals>
+					      <configuration>
+					        <rules>
+					          <requireProperty>
+					            <property>jboss.home</property>
+					          </requireProperty>
+					        </rules>
+					        <fail>true</fail>
+					      </configuration>
+					    </execution>
+					  </executions>
+					</plugin>
+				</plugins>
          </build>
       </profile>
    
