--- a/api/pom.xml
+++ b/api/pom.xml
@@ -34,6 +34,12 @@
 		  <type>pom</type>
 		  <scope>provided</scope>
 	  </dependency>
+	  <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-core</artifactId>
+         <optional>true</optional>
+         <scope>provided</scope>
+      </dependency>
 	  
    </dependencies>
 
