SEAMPERSIST-9 Allow SMPC to be defined using @Resource

--- a/tests-jboss/pom.xml
+++ b/tests-jboss/pom.xml
@@ -33,6 +33,11 @@
       </dependency>
 
       <dependency>
+         <groupId>javax.enterprise</groupId>
+         <artifactId>cdi-api</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
          <scope>provided</scope>
@@ -142,7 +147,6 @@
                <skip>true</skip>
             </configuration>
          </plugin>
-
       </plugins>
    </build>
 
