--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -116,6 +116,7 @@
          <artifactId>hibernate-search</artifactId>
          <version>3.2.1.Final</version>
          <optional>true</optional>
+         <scope>provided</scope>
       </dependency>
       
       <dependency>
