--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
       <module>impl</module>
       <module>tests-base</module>
       <module>tests-jetty</module>
+      <module>tests-jetty-openjpa</module>
    </modules>
 
    <properties>
@@ -46,6 +47,7 @@
       <jsp.version>2.2</jsp.version>
       <weld.version>1.1.0.Beta1</weld.version>
       <hsqldb.version>1.8.0.10</hsqldb.version>
+      <openjpa.version>2.0.0</openjpa.version>
    </properties>
 
    <dependencyManagement>
@@ -229,6 +231,14 @@
             <version>1.0-SP2</version>
          </dependency>    
          
+         <!-- Openjpa -->
+         
+         <dependency>
+           <groupId>org.apache.openjpa</groupId>
+           <artifactId>openjpa-all</artifactId>
+           <version>${openjpa.version}</version>
+         </dependency>
+
       </dependencies>       
            
    </dependencyManagement>
@@ -323,7 +333,7 @@
          <email>stuart.w.douglas@gmail.com</email>
       </developer>
    </developers>
-
+   
    <scm>
       <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk </connection>
       <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk </developerConnection>
