--- a/tests/jboss/pom.xml
+++ b/tests/jboss/pom.xml
@@ -4,7 +4,7 @@
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
       <version>3.0.0-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
+      <relativePath>../../pom.xml</relativePath>
    </parent>
 
    <modelVersion>4.0.0</modelVersion>
