--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
       <weld.version>1.1.0.Beta1</weld.version>
       <hsqldb.version>1.8.0.10</hsqldb.version>
       <openjpa.version>2.0.0</openjpa.version>
+      <seam.xml.version>3.0.0-SNAPSHOT</seam.xml.version>
    </properties>
 
    <dependencyManagement>
@@ -92,7 +93,7 @@
          <dependency>
             <groupId>org.jboss.seam.xml</groupId>
             <artifactId>seam-xml-config</artifactId>
-            <version>${project.version}</version>
+            <version>${seam.xml.version}</version>
          </dependency>
 
          <dependency>
