--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
       <weld.version>1.1.0.Beta1</weld.version>
       <hsqldb.version>1.8.0.10</hsqldb.version>
       <openjpa.version>2.0.0</openjpa.version>
-      <seam.xml.version>3.0.0-SNAPSHOT</seam.xml.version>
+      <seam.xml.version>3.0.0.Alpha3</seam.xml.version>
    </properties>
 
    <dependencyManagement>
