--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Alpha1</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
@@ -11,7 +10,7 @@
    <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-impl</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Alpha1</version>
    <name>Seam Persistence</name>
 
    <properties>
@@ -376,9 +375,9 @@
    </profiles>
 
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk/impl</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk/impl</developerConnection>
-      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk/impl</url>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1/impl</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1/impl</developerConnection>
+      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/tags/3.0.0.Alpha1/impl</url>
    </scm>
 
 </project>
