--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -2,7 +2,7 @@
    <parent>
       <artifactId>seam-persistence-parent</artifactId>
       <groupId>org.jboss.seam.persistence</groupId>
-      <version>3.0.0.Alpha1</version>
+      <version>3.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
@@ -10,7 +10,7 @@
    <groupId>org.jboss.seam.persistence</groupId>
    <artifactId>seam-persistence-impl</artifactId>
    <packaging>jar</packaging>
-   <version>3.0.0.Alpha1</version>
+   <version>3.0.0-SNAPSHOT</version>
    <name>Seam Persistence</name>
 
    <properties>
@@ -375,9 +375,9 @@
    </profiles>
 
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1/impl</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1/impl</developerConnection>
-      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/tags/3.0.0.Alpha1/impl</url>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk/impl</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk/impl</developerConnection>
+      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk/impl</url>
    </scm>
 
 </project>
