--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
    <artifactId>seam-persistence-parent</artifactId>
    <groupId>org.jboss.seam.persistence</groupId>
-   <version>3.0.0.Alpha1</version>
+   <version>3.0.0-SNAPSHOT</version>
 
    <packaging>pom</packaging>
    <name>Seam Persistence Module Parent POM</name>
@@ -335,9 +335,9 @@
    </developers>
    
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/tags/3.0.0.Alpha1</developerConnection>
-      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/tags/3.0.0.Alpha1</url>
+      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk</connection>
+      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk</developerConnection>
+      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk</url>
    </scm>
 </project>
 
