--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,6 +21,7 @@
       <dependency>
          <groupId>javax.enterprise</groupId>
          <artifactId>cdi-api</artifactId>
+         <scope>provided</scope>
       </dependency>
       
       <dependency>
