fix up distribution profile

--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
             </property>
          </activation>
          <modules>
-            <!-- <module>dist</module> -->
+            <module>dist</module>
             <module>docs</module>
          </modules>
       </profile>
