--- a/tests/jboss/pom.xml
+++ b/tests/jboss/pom.xml
@@ -282,9 +282,9 @@
    </profiles>
 
    <scm>
-      <connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/persistence/trunk/tests-jboss</connection>
-      <developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/persistence/trunk/tests-jboss</developerConnection>
-      <url>http://fisheye.jboss.org/browse/Seam/modules/persistence/trunk/tests-jboss</url>
+      <connection>scm:git:git://github.com/seam/persistence.git</connection>
+      <developerConnection>scm:git:git@github.com:seam/persistence.git</developerConnection>
+      <url>http://github.com/seam/persistence</url>
    </scm>
 
 </project>
