weldx needs to have deps excluded for 1.0.0.Beta1

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -107,6 +107,16 @@
          <groupId>org.jboss.weld</groupId>
          <artifactId>weld-extensions</artifactId>
          <scope>compile</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>javax.el</groupId>
+               <artifactId>el-api</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>javax.transaction</groupId>
+               <artifactId>jta</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
       
       <dependency>
